--- a/templates/template.html
+++ b/templates/template.html
@@ -1,76 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title> Survey on Bayesian Network explanations </title>
-  <style>
-    svg { border: 1px solid black; }
-    svg g rect.node-shape { border-radius: 5px !important; fill:#ffecb3 !important; cursor: move; }
-    svg g text.node-name { font-weight: 800 !important }
-    svg g rect.node-bar { fill: green !important }
-    svg g text.node-value { fill:rgb(0,0,0) !important; font-size: 15px; cursor: pointer; }
-    svg line.edge-line { stroke:rgb(0,0,0) !important }
-    svg path.edge-head { fill:rgb(0,0,0) !important }
-  </style>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script src="{{ url_for('static', filename='node_modules/d3/d3.js') }}"></script>
-  <script src="{{ url_for('static', filename='node_modules/lodash/lodash.js') }}"></script>
-  <script src="{{ url_for('static', filename='node_modules/graphlib/dist/graphlib.core.js') }}"></script>
-  <script src="{{ url_for('static', filename='node_modules/dagre/dist/dagre.core.js') }}"></script>
-  <script src="{{ url_for('static', filename='node_modules/jsbayes/jsbayes.js') }}"></script>
-  <script src="{{ url_for('static', filename='node_modules/jsbayes-viz/jsbayes-viz.js') }}"></script>
-  <script>
-    function getGraph() {
-      
-      var graph = jsbayes.newGraph();
-      graph.saveSamples = false;
-      
-      <!-- Add nodes to graph -->
-      {% for node in bn_model.nodes %}
-      var {{ node }} = graph.addNode( '{{ node }}', [{% for state in bn_model.states[node] %} '{{ state }}',  {% endfor %}]);
-      {% endfor %}
-      
-      <!-- Add edges to graph -->
-      {% for parent, child in bn_model.edges %}
-      {{child}}.addParent({{parent}});
-      {% endfor %}
-      
-      <!-- Add CPDs to graph -->
-      {% for node in bn_model.nodes %}
-      {{node}}.setCpt({{squeeze_fn(bn_model.get_cpds(node).values.T.reshape((-1,2))).tolist()}});
-      {% endfor %}
-
-      graph.sample(20000);
-
-      var g = jsbayesviz.fromGraph(graph);
-      return g;
-    }
-        
-    $(document).ready(function() {
-      (function(window) { 
-        var graph = getGraph();
-        jsbayesviz.draw({
-          id: '#bbn',
-          width: 800,
-          height: 800,
-          graph: graph,
-          samples: 15000
-        });
-        
-        
-      })(window);
-    });
-  </script>
+  <title>Survey Bayesian Networks</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-	<h1>Survey on Bayesian Networks</h1>
-  
+	
+	
+<div class="jumbotron text-center">
+<h1>Survey on Bayesian Networks</h1>
+</div>
+	
+<div class="container">
+  <div class="row">
+ 
   <!-- Bayesian Network graph -->
 	<img src="{{ url_for('static', filename=bn_graph) }}" />
 	
   <!-- Table with explanation of the variables in the BN -->
   {{ variable_description|safe }}
+  <!--{% for table in tables %}
+    <!-- {{titles[loop.index]}} 
+    {{ table|safe }}
+  {% endfor %} -->
   
-  <!-- Interactive container with the explanation -->
+  <!-- Observed evidence -->
   {% for output in interactive_output %}
     <div class="tabcontent">
     {% for line in output.text %}
@@ -80,10 +39,9 @@
     </div>
   {% endfor %}
   
-  <!-- Javascript visualization -->
-  <svg id="bbn"></svg>
-  
-	<!-- Survey -->  
+  <!-- Interactive container with the explanation -->
+  <p> Placeholder for explanation </p>
+	  
   <form action="." method="POST">
     <p> Is there a mistake in the network? </p>
     <input type="text" name="text1">
@@ -92,7 +50,7 @@
     <input type="submit" name="my-form" value="Submit">
   </form>
   
-  
-    
+  </div>
+   </div> 
 </body>
 </html>
